@@ -3,6 +3,7 @@ package com.leaderboard.service;
 import com.leaderboard.dto.api.response.ProviderData;
 import com.leaderboard.dto.api.response.ProviderDataResponse;
 import com.leaderboard.dto.api.response.ProviderResponse;
+import com.leaderboard.dto.api.response.StakeResponse;
 import com.leaderboard.entity.GameType;
 import com.leaderboard.entity.Provider;
 import com.leaderboard.entity.Stake;
@@ -13,8 +14,8 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ProviderServiceImpl implements ProviderService {
@@ -30,26 +31,27 @@ public class ProviderServiceImpl implements ProviderService {
         return resultService.getAllProviders()
                 .stream()
                 .map(allProvider -> new ProviderResponse(allProvider.name(), allProvider.getDescription()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public ProviderDataResponse getProviderData(String providerString) {
         Provider provider = getProvider(providerString);
+        LocalDate lastUpdate = resultService.getLastUpdateByProvider(provider);
+        List<GameType> gameTypeData = resultService.getGameTypesDataByProvider(provider);
+        gameTypeData.sort(Comparator.comparing(GameType::name));
 
         List<ProviderData> providersData = new ArrayList<>();
 
-        // TODO: 15.09.2022 lastUpdate
-        LocalDate lastUpdate = resultService.getLastUpdateByProvider(provider);
-        List<GameType> gameTypeData = resultService.getGameTypesDataByProvider(provider);
-
         for (GameType gameTypeDatum : gameTypeData) {
-            // TODO: 15.09.2022 sort bu stake
-            List<Stake> stakes = resultService.getStakesByByProviderAndGameType(provider, gameTypeDatum);
+            List<StakeResponse> stakes = resultService.getStakesByByProviderAndGameType(provider, gameTypeDatum)
+                    .stream()
+                    .sorted(Comparator.comparing(Stake::getStakeEquivalent).reversed())
+                    .map(stake -> new StakeResponse(stake.getCurrency(), stake.getStakeEquivalent().toString()))
+                    .toList();
             providersData.add(new ProviderData(gameTypeDatum, stakes));
         }
-
-        return new ProviderDataResponse(null, providersData);
+        return new ProviderDataResponse(lastUpdate, providersData);
     }
 
     private Provider getProvider(String providerStr) {
@@ -58,4 +60,5 @@ public class ProviderServiceImpl implements ProviderService {
                 .findFirst()
                 .orElseThrow(() -> new IllegalArgumentException("Provider not found by name " + providerStr));
     }
+
 }
